https://jira.deutsche-digitale-bibliothek.de/browse/DDBNEXT-777: fixed layout issue in Firefox

--- a/web-app/css/ddb.css
+++ b/web-app/css/ddb.css
@@ -448,6 +448,7 @@ header .login-dropdown,.header .login-dropdown {
   height: 15px;
   background: transparent url("../images/icons/aux_nav_icons.png") no-repeat 3px -40px;
   cursor: pointer;
+  vertical-align: top;
 }
 
 header .header-spacer,.header .header-spacer {
@@ -585,6 +586,7 @@ header .header-spacer,.header .header-spacer {
   position: relative;
   display: inline-block;
   cursor: pointer;
+  vertical-align: top;
 }
 
 .language-wrapper .nopointer {
